--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.1.0",
+    "pg-promise": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
